--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,6 +48,8 @@
                 </div>
             </div>
         </nav>
+
+        <partial name="_LoginPartial"/>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
