--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -1,9 +1,23 @@
 ﻿@using OnlineShop.Models;
 @model OnlineShop.Models.Products
 
+@using OnlineShop.Utility
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
 
 @{
     ViewData["Title"] = "Details";
+
+    List<Products> products = HttpContextAccessor.HttpContext.Session.Get<List<Products>>("products");
+
+    Products product = null;
+
+    if(products != null)
+    {
+        product = products.FirstOrDefault(x => x.Id == Model.Id);
+    }
+
 }
 
 <br />
@@ -25,49 +39,89 @@
 
     <div class="card-body p-4">
         <form asp-action="Details" method="post" enctype="multipart/form-data">
+
+
             <div class="p-4 rounded border">
                 <div asp-validation-summary="ModelOnly" class="text-danger">
                 </div>
 
+                <div class="row">
+                    <div class="col-8">
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Name" class="p-0"> </label>
+                            <input type="hidden" asp-for="Id" />
+                            <input asp-for="Name" readonly="readonly" class="form-control" />
+                            <span asp-validation-for="Name" class="text-dandger"></span>
+                        </div>
 
-                <div class="mb-3 row p-1">
-                    <label asp-for="Name" class="p-0"> </label>
-                    <input type="hidden" asp-for="Id" />
-                    <input asp-for="Name" readonly="readonly" class="form-control" />
-                    <span asp-validation-for="Name" class="text-dandger"></span>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Price" class="p-0"> </label>
+                            <input asp-for="Price" readonly="readonly" class="form-control" />
+                            <span asp-validation-for="Price" class="text-dandger"></span>
+                        </div>
+
+
+                        <div class="mb-3 row p-1">
+                            <label asp-for="ProductColor" class="p-0"> </label>
+                            <input asp-for="ProductColor" readonly="readonly" class="form-control" />
+                            <span asp-validation-for="ProductColor" class="text-dandger"></span>
+                        </div>
+
+                        <div class="mb-3 row p-1">
+                            <label asp-for="ProductTypeId" class="p-0"> </label>
+                            @* <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" class="form-control"> </select> *@
+                            <input asp-for="ProductTypeId" readonly="readonly" class="form-control" />
+                            <span asp-validation-for="ProductTypeId" class="text-dandger"></span>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        @if (Model.IsAvailable)
+                        {
+                            <img src="~/images/download (1).jpg" alt="Card Image" class="card-img-top" style="height:300px" />
+                        }
+                        else
+                        {
+                            <img src="~/images/download.jpg" alt="Card Image" class="card-img-top" style="height:300px" />
+                            
+                        }
+
+                    </div>
+
+
+
                 </div>
 
-                <div class="mb-3 row p-1">
-                    <label asp-for="Price" class="p-0"> </label>
-                    <input asp-for="Price" readonly="readonly" class="form-control" />
-                    <span asp-validation-for="Price" class="text-dandger"></span>
-                </div>
-
-
-                <div class="mb-3 row p-1">
-                    <label asp-for="ProductColor" class="p-0"> </label>
-                    <input asp-for="ProductColor" readonly="readonly" class="form-control" />
-                    <span asp-validation-for="ProductColor" class="text-dandger"></span>
-                </div>
-
-                <div class="mb-3 row p-1">
-                    <label asp-for="ProductTypeId" class="p-0"> </label>
-                    @* <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" class="form-control"> </select> *@
-                    <input asp-for="ProductTypeId" readonly="readonly" class="form-control" />
-                    <span asp-validation-for="ProductTypeId" class="text-dandger"></span>
-                </div>
+              
 
                 
+                <div class="row">
+                    <div class=" col-8">
+                        @if(product == null)
+                        {
+                            <input type="submit" class="btn btn-info form-control" value="Add to Card"/>
 
-                <div class="mb-3 row p-1">
-                    <input type="submit" class="btn btn-info form-control" value="Add to Card"/>
+                        }
+                        else
+                        {
+                             <button type="submit" class="btn btn-danger form-control" asp-action="Remove" asp-route-id="@Model.Id">Remove to card</button>
+                        }
+                    </div>
+                    <div class="4">
+                        <div class="form-group">
+                                 <a asp-action="Index" asp-asp-controller="Home" class="btn btn-success">Back to Product</a>
+
+                        </div>
+
+                    </div>
+                </div>
+                <div class="mb-3 p-1">
                 </div>
 
 
-                <div class="form-group">
 
-                    <a asp-action="Index" asp-asp-controller="Home" class="btn btn-success">Back to Product</a>
-                </div>
+
+
             </div>
 
 
