--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,13 +22,14 @@
                 </div>
 
                 <img src="~/images/mobile.webp" alt="Card Image" class="card-img-top" style="height:300px" />
-                <div class="card-header">
+                <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <label style="font-size: 20px; color:#a51313"><b>Price:@product.Price</b> </label>
                         </div>
                        <a asp-action="Details" asp-controller="Home" asp-route-id="@product.Id" class="btn btn-success pull-right btn-outline-info">Details</a>
-                    </div>
+                       
+                   </div>
                 </div>
             </div>
         </div>
