--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -26,10 +26,10 @@
         <form method="post">
             <div class="row">
                 <div class="col-3">
-                    <input type="text" class="form-control" name="lowPrice" />
+                    <input type="number" class="form-control" name="lowPrice" />
                 </div>
                 <div class="col-3">
-                    <input type="text" class="form-control" name="highPrice" />
+                    <input type="number" class="form-control" name="highPrice" />
                 </div>
                 <div class="col-3">
                     <input type="submit" value="Search" class="btn btn-success" />
