--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -41,7 +41,7 @@
     <div class="col-6">
         <h3>Total Amount: </h3>
         <h3>Grant Total: @Model.Sum(x=>x.Price)</h3>
-        <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">Process to Checkout</a>
+        <a asp-action="Checkout" asp-controller="Order" class="btn btn-secondary">Process to Checkout</a>
     </div>
 
 </div>
