--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using OnlineShop.Models;
-@model List<Products>
+@model X.PagedList.IPagedList<Products>
 
 @{
     ViewData["Title"] = "Home Page";
